# gamebox

./: .gitignore  Cargo.toml  README.md
examples/: usage_example.rs
src/: lib.rs  logger.rs
src/models/: game_info.rs  game_meta_data.rs  mod.rs
src/providers/: dlsite_provider.rs  igdb_provider.rs  mod.rs  thegamesdb_provider.rs
src/scan/: game_grouping.rs  mod.rs  patterns.rs  scanner.rs  utils.rs
src/test/: scan_test.rs  search_test.rs
src/traits/: game_metadata_filter.rs  json_output.rs  mod.rs
