[package]
name = "gamebox"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
futures = "0.3.31"
# 使用 GitHub 最新版本，包含 API 修复 (trade_price 字段问题)
dlsite = { git = "https://github.com/ozonezone/dlsite-rs", branch = "master" } # dlsite搜索库
ignore = "0.4.24" 
chrono = "0.4.42"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
num_cpus = "1.17.0"
once_cell = "1.21.3" 
serde_json = "1.0"

[dev-dependencies]

# 测试二进制文件
[[bin]]
name = "search_test"
path = "src/test/search_test.rs"

[[bin]]
name = "scan_test"
path = "src/test/scan_test.rs"
