[package]
name = "gamebox"
version = "0.1.1"
edition = "2021"
authors = ["SuperToolman <2639983693@qq.com>"]
description = "A powerful Rust library for game collection management with automatic scanning, intelligent metadata retrieval from multiple databases (DLsite, IGDB, TheGamesDB), and smart matching algorithms"
license = "Apache-2.0"
repository = "https://github.com/SuperToolman/gamebox"
homepage = "https://github.com/SuperToolman/gamebox"
documentation = "https://docs.rs/gamebox"
readme = "README.md"
keywords = ["game", "scanner", "metadata", "dlsite", "igdb"]
categories = ["games", "filesystem", "api-bindings"]
exclude = [
    "examples/*",
    "src/test/*",
    ".gitignore",
    ".git/*",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
# 使用 dlsite-gamebox（fork 并优化后的版本）
dlsite-gamebox = "0.3"
ignore = "0.4"
chrono = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
once_cell = "1"
serde_json = "1.0"

[dev-dependencies]
